# lz4-sgori

./: .clang-format  .clang-tidy  .clangd  .gitignore  Kbuild  Makefile  README.md  flags.mk  params
.github/workflows/: build.yml  format.yml  lint.yml  test.yml  wiki-sync.yml
blkproxy/: blkproxy.c
bvec/: Makefile
doc/: API.md  Experiment.md  Home.md  Usage.md
experiment/: .gitignore  README.md  generate_graphs.py  generate_perf_graphs.py  perf_event_counter.py  pyproject.toml  run_experiment.py
include/: lz4e.h  lz4e_chunk.h  lz4e_defs.h  lz4e_req.h
lz4e/: Kbuild  lz4e_compress.c  lz4e_decompress.c
lz4e/include/: lz4e.h  lz4e_defs.h
lz4e_bdev/: Kbuild  lz4e_chunk.c  lz4e_dev.c  lz4e_module.c  lz4e_req.c  lz4e_stats.c  lz4e_under_dev.c
lz4e_bdev/include/: lz4e_chunk.h  lz4e_chunk_internal.h  lz4e_chunk_private.h  lz4e_dev.h  lz4e_module.h  lz4e_req.h  lz4e_static.h  lz4e_stats.h  lz4e_under_dev.h
module/: lz4e_chunk.c  lz4e_dev.c  lz4e_module.c  lz4e_req.c
scripts/: check_with_clang_format.sh  check_with_clang_tidy.sh  fix_with_clang_format.sh  fix_with_clang_tidy.sh  stats_pretty_print.sh
test/: literals.sh
test/bash_tests/: test_acceleration.sh  test_all.sh  test_mapper.sh  test_stats.sh
test/fio_tests/: test_all.sh
