[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lz4-compression-experiment"
version = "1.0.0"
description = "Experimental environment for comparing LZ4 compression variations in Linux kernel"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-2.0-only"}
authors = [
    {name = "Alexander Bugaev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Operating System Kernels :: Linux",
]

dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pyright>=1.1.350",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "types-setuptools",
]

[project.scripts]
lz4-experiment = "run_experiment:main"
lz4-graphs = "generate_graphs:main"

[tool.setuptools]
py-modules = ["run_experiment", "generate_graphs"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from None
    "C901",   # too complex
    "RUF012", # mutable class attributes
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "dist",
    "build",
    "tmp",
    "result",
    "graph",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["run_experiment", "generate_graphs"]
combine-as-imports = true
force-single-line = false

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pyright]
include = ["*.py"]
exclude = [
    ".git",
    "**/__pycache__",
    ".venv",
    "venv",
    "dist",
    "build",
    "tmp",
    "result",
    "graph",
]
pythonVersion = "3.8"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnusedVariable = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportDuplicateImport = "error"
reportOptionalSubscript = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalCall = "warning"
reportOptionalIterable = "warning"
reportOptionalContextManager = "warning"
reportOptionalOperand = "warning"
reportTypedDictNotRequiredAccess = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportAssertAlwaysTrue = "warning"
reportSelfClsParameterName = "warning"
reportImplicitStringConcatenation = "warning"
reportUndefinedVariable = "error"
reportUnboundVariable = "error"
reportInvalidStubStatement = "error"
reportIncompleteStub = "warning"
reportGeneralTypeIssues = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "error"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportCallInDefaultInitializer = "error"
reportUnnecessaryContains = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
